--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                <ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
                   <!--<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>-->
-				  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank"></a></li>
+				  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>
                 </ul>
               </div>
@@ -194,7 +194,7 @@
 				<p>
 					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
 					YouTube: I share my downloads from the Divine.</a><br>
-					<a class="fa-brands fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank" style="float: left; color: blue;">
+					<a class="fa-brands fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank" style="float: left; color: blue;">
 					Facebook: I show and teach how to create your own synchronicities.<br>
 					<a class="fa-brands fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank" style="float: left; color: darkmagenta;"> Instagram</a>
 					
@@ -459,7 +459,7 @@
             <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved.</p>
             <ul class="social-links">
 				<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
-                <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100092329838178" target="_blank"></a></li>
+                <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank"></a></li>
                 <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>			
             </ul>
           </div>
