--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                       </li>
                       <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a>
                       </li>-->
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank">YouTube</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/@choosefrequency" target="_blank">YouTube</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact</a>
                       </li>
