--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
             <div class="col-xl-8 col-12">
               <div class="main-decorated-box text-center text-xl-left">
 				  <div class="rd-navbar-brand">
-					<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/></a>
+					<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/>
+					<span class="prefix-text text-white big font-weight-bold offset-top-30">Hypnotherapy and Spiritual Life Coaching</span></a>
 				  </div>
-                <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span><span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest d-block d-xl-flex font-weight-bold">frequency</span></h1>
+                <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span>
+				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest d-block d-xl-flex font-weight-bold">frequency</span></h1>
                 <div class="decorated-subtitle text-italic text-white wow slideInLeft">the one you want to experience.</div>
               </div>
             </div>
