--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>Choose Frequency - Spiritual Life Coach</title>
+    <title>Choose Frequency - Hypnotherapy and Spiritual Life Coaching</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -174,8 +174,9 @@
         <div class="container">
           <div class="row row-30">
             <div class="col-lg-6 first-picture">
-              <div class="block-decorate-img wow fadeInLeft" data-wow-delay=".2s"><img src="images/home-1-570x703.jpg" alt="" width="570" height="351"/>
-              </div>
+              <div class="overlay_images block-decorate-img wow fadeInLeft" data-wow-delay=".2s"><img class="firstImg" src="images/home-1-570x703.jpg" alt="" width="570" height="351"/>
+			  <a href="https://drive.google.com/file/d/1jk9jDhNE7z9R2Ch1ZwJ6CJDIt9BY8u8r/view?usp=share_link" target="_blank"><img class="book" src="images/books/vibrations.png" alt="Raising Vibrations for Manifestations" ></a></div>
+
             </div>
             <div class="col-lg-6 col-12">
               <div class="block-sm">
@@ -212,8 +213,6 @@
 				<a href="https://www.evolvelifecoachingcollege.com/" target="_blank">
 					<img src="images/EvolveLogo.jpg" alt="Girl in a jacket" width="210">
 				</a>
-				<!--<div align="center"><a href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank"><img src="images/books/LeavingWithNPD.png" alt="Leaving with NPD" style="width:220px;height:220px;"></a></div>
-				<div align="center">Leaving with NPD</div>-->
               </div>
             </div>
           </div>
