--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
           <div class="row row-30">
             <div class="col-lg-6 first-picture">
               <div class="overlay_images block-decorate-img wow fadeInLeft" data-wow-delay=".2s"><img class="firstImg" src="images/home-1-570x703.jpg" alt="" width="570" height="351"/>
-			  <a href="https://drive.google.com/file/d/1jk9jDhNE7z9R2Ch1ZwJ6CJDIt9BY8u8r/view?usp=share_link" target="_blank"><img class="book" src="images/books/vibrations.png" alt="Raising Vibrations for Manifestations" ></a></div>
+				<!--<a href="https://drive.google.com/file/d/1jk9jDhNE7z9R2Ch1ZwJ6CJDIt9BY8u8r/view?usp=share_link" target="_blank"><img class="book" src="images/books/vibrations.png" alt="Raising Vibrations for Manifestations" ></a>-->
+			  </div>
 
             </div>
             <div class="col-lg-6 col-12">
