--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta class="metaTagTop" name="keywords" content="healing, hypnosis, Hypnotherapy, narcissistic abuse, narcissism, tarot, spirituality">
+	<meta class="metaTagTop" name="keywords" content="healing, hypnosis, Hypnotherapy, tarot, spirituality">
 	<meta class="metaTagTop" name="author" content="Gosia Witkowska">
     <link rel="icon" href="images/CF_LogoCircle.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="fonts/fontMonterrat.css">
@@ -191,7 +191,7 @@
 					How to transmute pain into creativity and grow at my own pace towards wherever my imagination can take me.   
 					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of the new frequency.  
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
-					might have been triggered by narcissistic abuse or painful experiences or develop naturally. 
+					might have been triggered by painful experiences or develop naturally. 
 					I help my clients to refocus from difficult situations in their life and go towards their potential and start exploring its true nature.
 					To become create their own synchronicities and manifest quicker whatever they desire.</p>
 				<p>
@@ -203,10 +203,6 @@
 					
 				</p>	
                <div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
-               <!--<p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
-					I can help people with a <span class="default-letter-spacing font-weight-bold ">narcissistic personality disorder</span>. 
-					Bringing relief to their childhood neglect and showing them how to trust and love.
-					</p>	-->			
 				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
 				<a href="https://coach-accreditation.services/" target="_blank">
 					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="Girl in a jacket" width="300" height="300">
@@ -267,7 +263,7 @@
                     <p class="box-default-description">
 						There are no small problems. 
 						You are not meant to just cope with them. 
-						We are not designed to be strong and competitive. It is abuse. </br> 
+						We are not designed to be strong and competitive.</br> 
 						We are here to feel our emotions, to explore, to learn. 
 						We are here to love and find out again that we are just all it is ... <span class="default-letter-spacing font-weight-bold ">Energy.</span></br>
 						Recognizing blockages and removing them from my client's system is, I find, the most profound part of my work.		
