--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                <ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
                   <!--<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>-->
-				  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank"></a></li>
+		<!--		  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank"></a></li>-->
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>
                 </ul>
               </div>
@@ -197,9 +197,9 @@
 				<p>
 					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
 					YouTube: I share my downloads from the Divine.</a><br>
-					<a class="fa-brands fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank" style="float: left; color: blue;">
+					<!--<a class="fa-brands fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank" style="float: left; color: blue;">
 					Facebook: I show and teach how to create your own synchronicities.<br>
-					<a class="fa-brands fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank" style="float: left; color: darkmagenta;"> Instagram</a>
+					<a class="fa-brands fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank" style="float: left; color: darkmagenta;"> Instagram</a>-->
 					
 				</p>	
                <div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
