--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					To become create their own synchronicities and manifest quicker whatever they desire.</p>
 				<p>
 					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
-					YouTube: Check what I like to talk about and research and my exercises how to generate your own synchronicities..</a><br>
+					YouTube: I share examples of my work and researches</a><br>
 					<!--<a class="fa-brands fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank" style="float: left; color: blue;">
 					Facebook: I show and teach how to create your own synchronicities.<br>
 					<a class="fa-brands fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank" style="float: left; color: darkmagenta;"> Instagram</a>-->
