--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                 <div class="section-name wow fadeInRight" data-wow-delay=".2s">About me</div>
                 <h3 class="wow fadeInLeft text-capitalize devider-bottom" data-wow-delay=".3s">
 					What I<span class="text-primary"> Do </span>
+					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/channel/UCQsZbheux-z8lGDTqomMkNA" target="_blank" style="float: right; color: red;"></a>
 				</h3>
                <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
 					I started the journey of life with a lot of obstacles to overcome. 
