--- a/thankyouforbooking.html
+++ b/thankyouforbooking.html
@@ -98,8 +98,8 @@
 				<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/></a>
 			  </div>			
 			
-              <h1 class="font-weight-bold wow fadeInLeft">Thank you for booking your session with Choose Frequency.</h1>
-			  <p class="intro-description wow fadeInRight">You should have received an email with all details and a Zoom link.</p>
+              <h1 class="font-weight-bold wow fadeInLeft">Thank you<h1> <label name="invitee_full_name"></label><h1> for booking your session with Choose Frequency.</h1>
+			  <p class="intro-description wow fadeInRight">A calendar invitation has been sent to your email address.</p>
             </div>
           </div>
         </div>
