--- a/Edina/index.html
+++ b/Edina/index.html
@@ -59,7 +59,7 @@
                         <div class="gallery-wrap-inner">
                           <h4>Gallery</h4>
                           <div class="dots-custom-lifestyle"></div>
-						  <a class="back-to-gallery button-link button-link-icon" href="#"><span class="novi-icon icon icon-primary fa fa-angle-left"></span><span>back to gallery</span></a>
+						  <a class="back-to-gallery button-link button-link-icon" href="#"><span class="novi-icon icon icon-primary fa fa-angle-left"></span><span>back to main page</span></a>
                         </div>
                         <div class="gallery-wrap-inner">
                           <!-- Owl Carousel-->
