--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                <ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
                   <!--<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>-->
-				  <!--<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank"></a></li>
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>-->
+				  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank"></a></li>
+                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>
                 </ul>
               </div>
             </div>
