--- a/collaboration.html
+++ b/collaboration.html
@@ -119,7 +119,7 @@
                 </div>
               </div>
             </div>
-	    <div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
+	    <!--<div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="team-classic-wrap">
                 <div class="team-classic-img"><img src="images/juliejons.jpg" alt="" width="370" height="198"/>
                 </div>
@@ -129,7 +129,7 @@
                   <hr class="offset-top-40"/>
                 </div>
               </div>
-            </div>
+            </div>-->
 	    <div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="team-classic-wrap">
                 <div class="team-classic-img"><img src="images/AnnaGrear.jpg" alt="" width="370" height="198"/>
