--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
                 </ul>
-				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">free session</a>
+				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
                <ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
                   <!--<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>-->
