--- a/collaboration.html
+++ b/collaboration.html
@@ -51,7 +51,7 @@
                     </div>
                   </li>
                 </ul>
-				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">free session</a>
+				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
 				<ul class="social-links">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank"></a></li>
@@ -66,7 +66,7 @@
                   <!--RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
 				  <div class="book_small">
-					<a class="button button-circle btn-primary-rounded" href="index.html#pricing">free session</a>
+					<a class="button button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
 				  </div>
                 </div>
                 <div class="rd-navbar-main-element">
