--- a/Tostmasters/index.html
+++ b/Tostmasters/index.html
@@ -156,7 +156,7 @@
             <div class="col-lg-7 col-xl-6">
               <div class="inset-4">
                 <div class="layout-2 wow fadeIn">
-                  <h2 class="text-uppercase font-weight-bold">Courses We Offer</h2>
+                  <h2 class="text-uppercase font-weight-bold">Pathways We Offer</h2>
                   <div class="layout-2-item"><a class="button button-sm button-style-1" href="#">See All</a></div>
                 </div>
                 <div class="row row-30 mt-xl-60">
