--- a/collaboration.html
+++ b/collaboration.html
@@ -119,17 +119,6 @@
                 </div>
               </div>
             </div>
-	    <!--<div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
-              <div class="team-classic-wrap">
-                <div class="team-classic-img"><img src="images/juliejons.jpg" alt="" width="370" height="198"/>
-                </div>
-                <div class="block-320 text-center">
-                  <h4 class="font-weight-bold">Julie Jones</h4><a href="https://cre8-wellbeing.co.uk/" target="_blank">cre8-wellbeing.co.uk</a>
-                  <p>Yoga | Life Coaching | Therapy | Hypnotherapy</p>
-                  <hr class="offset-top-40"/>
-                </div>
-              </div>
-            </div>-->
 	    <div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="team-classic-wrap">
                 <div class="team-classic-img"><img src="images/AnnaGrear.jpg" alt="" width="370" height="198"/>
@@ -197,7 +186,17 @@
                 </div>
               </div>
             </div>
-		  
+		 	<div class="col-xl-2 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
+              <div class="team-classic-wrap">
+                <div class="team-classic-img"><img src="images/stefan.png" alt="" width="370" height="198"/>
+                </div>
+                <div class="block-320 text-center">
+                  <h4 class="font-weight-bold">Stefan Scrivener</h4><a href="https://www.mymentalvitality.com/" target="_blank">www.mymentalvitality.com</a>
+                  <p>MyMentalVitality | Life Coaching | Therapy | Hypnotherapy</p>
+                  <hr class="offset-top-40"/>
+                </div>
+              </div>
+            </div>
 		  
           </div>
         </div>
