--- a/collaboration.html
+++ b/collaboration.html
@@ -192,7 +192,7 @@
                 </div>
                 <div class="block-320 text-center">
                   <h4 class="font-weight-bold">Stefan Scrivener</h4><a href="https://www.mymentalvitality.com/" target="_blank">www.mymentalvitality.com</a>
-                  <p>MyMentalVitality | Life Coaching | Therapy | Hypnotherapy</p>
+                  <p>MyMentalVitality | Life Coaching | NLP | Hypnotherapy</p>
                   <hr class="offset-top-40"/>
                 </div>
               </div>
