--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,7 @@
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
   <body>
+  
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <div class="preloader">
       <div class="preloader-body">
@@ -90,7 +91,7 @@
         </div>
       </header>
 	  <section class="section section-intro context-dark">
-        <div class="intro-bg" style="background: url(images/intro-bg-1.jpg) no-repeat;background-size:cover;background-position: top center;"></div>
+        <div class="intro-bg" style="background: url(images/breadcrumbs-post.jpg) no-repeat;background-size:cover;background-position: top center;"></div>
         <div class="container">
 	
           <div class="row justify-content-center">
