--- a/collaboration.html
+++ b/collaboration.html
@@ -90,7 +90,7 @@
         </div>
       </header>
 	  <section class="section section-intro context-dark">
-        <div class="intro-bg" style="background: url(images/intro-bg-1.jpg) no-repeat;background-size:cover;background-position: top center;"></div>
+        <div class="intro-bg" style="background: url(images/breadcrumbs-careers.jpg) no-repeat;background-size:cover;background-position: top center;"></div>
         <div class="container">
 	
           <div class="row justify-content-center">
