--- a/terms.html
+++ b/terms.html
@@ -22,7 +22,6 @@
         <p>Loading...</p>
       </div>
     </div>
-	<img class="intro-bg" src="images/intro-bg-1a.jpg" srcset="images/intro-bg-1a.jpg 1x, images/intro-bg-1a.jpg 2x" alt="" width="100%" height="310">
     <div class="page">
       <header class="section page-header">
         <!--RD Navbar-->
@@ -91,7 +90,7 @@
         </div>
       </header>
       <section class="section section-intro context-dark">
-        <div class="intro-bg" style="background: url(images/intro-bg-1.jpg) no-repeat;background-size:cover;background-position: top center;"></div>
+        <div class="intro-bg" style="background: url(images/breadcrumbs-about.jpg) no-repeat;background-size:cover;background-position: top center;"></div>
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-xl-8 text-center">
