--- a/index.html
+++ b/index.html
@@ -69,77 +69,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div><div class="section section-banner d-none d-xl-block" target="_blank" style="background-image: url(images/background-02-1920x60.jpg); background-image: -webkit-image-set( url(images/background-02-1920x60.jpg) 1x, url(images/background-02-3840x120.jpg) 2x )">
 	<img src="images/foreground-02-1600x60.png" alt="" height="310" ></div>
     <div class="page">
-      <header class="section page-header">
-        <!--RD Navbar-->
-        <div class="rd-navbar-wrap">
-          <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-static" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="46px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
-            <div class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle=".rd-navbar-collapse"><span></span></div>
-            <div class="rd-navbar-aside-outer rd-navbar-collapse bg-gray-dark">
-              <div class="rd-navbar-aside">
-                <ul class="list-inline navbar-contact-list">
-                  <li>
-                    <div class="unit unit-spacing-xs align-items-center">
-                      <div class="unit-left"><span class="icon text-middle fa-phone"></span></div>
-                      <div class="unit-body"><a href="tel:#">+44 7758748210</a></div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="unit unit-spacing-xs align-items-center">
-                      <div class="unit-left"><span class="icon text-middle fa-envelope"></span></div>
-                      <div class="unit-body"><a href="mailto:#">choosefrequency@gmail.com</a></div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="unit unit-spacing-xs align-items-center">
-                      <div class="unit-left"><span class="icon text-middle fa-map-marker"></span></div>
-                      <div class="unit-body"><a href="#">London UK</a></div>
-                    </div>
-                  </li>
 
-
-                </ul>
-				<a class="button button-190 button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
-               <ul class="social-links">
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank"></a></li>
-                  <!--<li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/profile.php?id=100087065251051" target="_blank"></a></li>-->
-				  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank"></a></li>
-                  <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank"></a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="rd-navbar-main-outer">
-              <div class="rd-navbar-main">
-                <!--RD Navbar Panel-->
-                <div class="rd-navbar-panel">
-                  <!--RD Navbar Toggle-->
-                  <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-				  <div class="book_small">
-					<a class="button button-circle btn-primary-rounded" href="index.html#pricing">book session</a>
-				  </div>
-                </div>
-                <div class="rd-navbar-main-element">
-                  <div class="rd-navbar-nav-wrap">
-                    <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
-                      </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="about.html">About</a>
-                      </li>
-                      <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://drive.google.com/file/d/1ZpGNZkO8bej1v293Ttz4eq50MPqXrPXr/view?usp=share_link" target="_blank">Book</a>
-                      </li>-->
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="blog.html" target="_blank">Blog</a></li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://www.youtube.com/@choosefrequency" target="_blank">YouTube</a>
-                      </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact</a>
-                      </li>
-					  <li class="rd-nav-item"><a class="rd-nav-link" href="collaboration.html">Collaboration</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </nav>
-        </div>
-      </header>
+    <header id="mainHeader" class="header-home"></header>
       <!--Main section-->
 	  
 	<!-- Calendly link widget begin -->
