--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </section>
   
       <!--Pricing-->
-      <section class="section section-md bg-xs-overlay prices" style="background:url('images/bg-image-3-1700x883.jpg')no-repeat;background-size:cover">
+      <section id="pricing" class="section section-md bg-xs-overlay prices" style="background:url('images/bg-image-3-1700x883.jpg')no-repeat;background-size:cover">
         <div class="container">
           <div class="row row-50 justify-content-center">
             <div class="col-12 text-center col-md-10 col-lg-8">
@@ -252,7 +252,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             </div>
           </div>
-          <div id="pricing" class="row row-30 justify-content-center">
+          <div class="row row-30 justify-content-center">
             <div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
               <div class="pricing-box bg-gray-dark">
                 <div class="pricing-box-tittle">Starter</div>
