--- a/blogPage.html
+++ b/blogPage.html
@@ -25,23 +25,8 @@
     </div>
     <div class="page">
     
-	<header id="mainHeader" class="header-blog"></header>
+	<header id="mainHeader" class="header-blogPage"></header>
 	
-	  <section class="section section-intro context-dark">
-        <div class="intro-bg" style="background: url(images/breadcrumbs-post.jpg) no-repeat;background-size:cover;background-position: top center;"></div>
-        <div class="container">
-	
-          <div class="row justify-content-center">
-            <div class="col-xl-8 text-center">
-			  <div class="rd-navbar-brand">
-				<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/></a>
-			  </div>			
-			
-              <h1 class="font-weight-bold wow fadeInLeft">Blog</h1>
-            </div>
-          </div>
-        </div>
-      </section>
       <!-- Influence -->
       <section class="section section-md">
         <div class="container collaboration_container">
