--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
           <div class="row row-50 justify-content-center">
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?S">
+			    <a href="blogPage.html?higher_dimension">
                 <div class="team-classic-img"><img src="images/blog/synchronicity.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
@@ -51,7 +51,7 @@
             </div>				
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?SR">
+			    <a href="blogPage.html?schumann_resonance">
                 <div class="team-classic-img"><img src="images/blog/Schumann-resonance.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
