--- a/blogPage.html
+++ b/blogPage.html
@@ -66,7 +66,7 @@ What if there is more and you could access different frequencies, develop new sk
 </p><p>
 <h5>Becoming invisible</h5>
 
-	When we go through a transformation, we change. It is inevitable. It should not surprise us more than others. What do I mean by that?
+When we go through a transformation, we change. It is inevitable. It should not surprise us more than others. What do I mean by that?
 Don’t be disappointed when people will stop understanding you or even noticing. 
 They can not walk with you along the road they do not see. And you can not go back to the one they are on. 
 You raise your vibrations when you seek more. You see what you can have and experience. And what is more profand you know you can not find it where you have been before. 
@@ -86,7 +86,34 @@ Depending on which dimension you occupy, you get particular access to heighten a
 We have to first start seeing it. It’s power and abilities. 
 How something else than just faith shapes our World. Nothing's a coincidence. Might sound like a slogan but when you start examining it, you will find a World of magic … not from the third dimension. 
 
-					</p>
+</p><p>
+<h5>Body and Mind changes</h5>
+
+There is no other way to allow a transformation than letting it in and letting it raise your vibrations. How? Let it rule you for a moment and learn how to do it yourself. 
+<br/>
+During a spiritual awakening you will experience voices, feelings, urges for new, different or even strange things. Go for it. Let this frequency enter your body and learn all about it. Be a radio for a moment and play the music you capture from the weather just tune to a new frequency. Start changing it to the point when it will resonate with your soul. It will be a sign your HigherSelf found its reality. 
+<br/>
+To shift to a different dimension they (spirit guides, entities) have to change your brain flexibility. It is why you might feel addicted to learning and courses. 
+<br/>
+They need to change your cellular structure to let you live longer. I wrote before about ways to extend our DNA chromosomes by extending telomeres. This is why gradually you stop eating meat, sugar, heavy meals.Food in general might stop interesting you. 
+<br/>
+They need to change your focus.It is why suddenly you will realise that you do not remember when you watched the last episode of your favourite drama or TV in general. 
+You will not be able to chat with your friends anymore because you will not know where there is a War now and who won in football recently. 
+<br/>
+<div class="blog-quote">
+"Strong minds discuss ideas, average minds discuss events, weak minds discuss people." <br/>
+<auth>~Socrates</auth>
+</div>
+
+They just are clearing your mind as you are meant to start seeing a different dimension where maybe War, football, money and food does not exist anymore. 
+<br/>
+After that you have a choice to make. Are you asking what is there? Magic.
+Your own World. You can make whatever you want. It belongs to you. Your dimension. 
+Where would you find better entertainment if not creating it yourself? 
+<br/>
+Really. Show me what you can come up with!
+<br/><br/><br/>
+</p>
 
 				</div>	
               </div>
