--- a/blogPage.html
+++ b/blogPage.html
@@ -31,8 +31,10 @@
       <!-- Influence -->
       <section class="section section-md">
         <div class="container collaboration_container">
-          <div id="blog_post" class="row row-50 justify-content-center">
-				
+          <div class="row row-50 justify-content-center">
+			<div id="higher_dimension" class="col-xl-8 col-sm-12 col-12 wow fadeInLeft" data-wow-delay=".3s">
+			  <div id="blog_post" class="blog-wrap team-classic-wrap"></div>  
+			</div>
           </div>
         </div>
       </section>
