--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
           <div class="row row-50 justify-content-center">
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?higher_dimension">
+			    <a href="blogPage.html?name=higher_dimension&id=3">
                 <div class="team-classic-img"><img src="images/blog/higher_dimension.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
@@ -51,7 +51,7 @@
             </div>				
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?schumann_resonance">
+			    <a href="blogPage.html?name=schumann_resonance&id=2">
                 <div class="team-classic-img"><img src="images/blog/schumann_resonance.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
@@ -69,7 +69,7 @@
             </div>	
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?seeing_others">
+			    <a href="blogPage.html?name=seeing_others&id=1">
                 <div class="team-classic-img"><img src="images/blog/seeing_others.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
