--- a/blogPage.html
+++ b/blogPage.html
@@ -74,7 +74,9 @@
 				break;
 			  case "3":
 				document.getElementById('blog-date').innerHTML = "FEBRUARY 23, 2023"
-				
+				break;
+			  case "4":
+				document.getElementById('blog-date').innerHTML = "DECEMBER 11, 2022"
 				break;
 			  default:
 				// code block
