--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <p>Loading...</p>
       </div>
-    </div><div class="section section-banner d-none d-xl-block" target="_blank">
+    </div>
     <div class="page">
 
     <header id="mainHeader" class="header-home"></header>
@@ -159,10 +159,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                <div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
 				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
 				<a href="https://coach-accreditation.services/" target="_blank">
-					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="Girl in a jacket" width="300" height="300">
-				</a>
-				<a href="https://www.evolvelifecoachingcollege.com/" target="_blank">
-					<img src="images/EvolveLogo.jpg" alt="Girl in a jacket" width="210">
+					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="" width="300" height="300">
 				</a>
               </div>
             </div>
