--- a/blogPage.html
+++ b/blogPage.html
@@ -78,6 +78,12 @@
 			  case "4":
 				document.getElementById('blog-date').innerHTML = "DECEMBER 11, 2022"
 				break;
+			  case "5":
+				document.getElementById('blog-date').innerHTML = "MARCH 4, 2023"
+				break;
+			  case "6":
+				document.getElementById('blog-date').innerHTML = "MARCH 30, 2023"
+				break;
 			  default:
 				// code block
 			}
