--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<a href="https://coach-accreditation.services/" target="_blank">
 					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="" width="300" height="300">
 				</a>
+				<a href="https://www.evolvelifecoachingcollege.com/" target="_blank">
+					<img src="images/EvolveLogo.jpg" alt="Girl in a jacket" width="210">
+				</a>				
               </div>
             </div>
           </div>
